--- a/authentication/api/frontend/frontendapi.yaml
+++ b/authentication/api/frontend/frontendapi.yaml
@@ -38,7 +38,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/tokenResponse'
+                $ref: '#/components/schemas/loginResponse'
         '404':
           description: User with login and password not found
   /authorization/refresh-token:
@@ -65,6 +65,7 @@ components:
       properties:
         salt:
           type: string
+
     loginRequest:
       type: object
       properties:
@@ -72,8 +73,40 @@ components:
           type: string
         password:
           type: string
+
     tokenResponse:
       type: object
       properties:
         accessJwtToken:
           type: string
+
+    loginResponse:
+      type: object
+      required:
+        - accessJwtToken
+        - user
+        - company
+      properties:
+        accessJwtToken:
+          type: string
+        user:
+          $ref: '#/components/schemas/user'
+        company:
+          $ref: '#/components/schemas/company'
+
+    user:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          format: User
+          type: integer
+
+    company:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          type: integer
