--- a/company/api/frontend/frontendapi.yaml
+++ b/company/api/frontend/frontendapi.yaml
@@ -22,17 +22,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                required:
-                  - isEditable
-                  - departments
-                properties:
-                  isEditable:
-                    type: boolean
-                  departments:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/departments'
+                $ref: '#/components/schemas/getAllDepartmentsResponse'
         '403':
           description: Forbidden
         '401':
@@ -55,15 +45,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                required:
-                  - isEditable
-                  - department
-                properties:
-                  isEditable:
-                    type: boolean
-                  department:
-                    $ref: '#/components/schemas/department'
+                $ref: '#/components/schemas/getDepartmentResponse'
         '403':
           description: Forbidden
         '401':
@@ -165,12 +147,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  isEditable:
-                    type: boolean
-                  employee:
-                    $ref: '#/components/schemas/employeeWithConnections'
+                $ref: '#/components/schemas/getEmployeeResponse'
         '403':
           description: Forbidden
         '401':
@@ -255,6 +232,38 @@ paths:
           description: Unauthorized
 components:
   schemas:
+    getAllDepartmentsResponse:
+      type: object
+      required:
+        - isEditable
+        - departments
+      properties:
+        isEditable:
+          type: boolean
+        departments:
+          type: array
+          items:
+            $ref: '#/components/schemas/departments'
+    getDepartmentResponse:
+      type: object
+      required:
+        - isEditable
+        - department
+      properties:
+        isEditable:
+          type: boolean
+        department:
+          $ref: '#/components/schemas/department'
+    getEmployeeResponse:
+        type: object
+        required:
+          - isEditable
+          - employee
+        properties:
+          isEditable:
+            type: boolean
+          employee:
+            $ref: '#/components/schemas/employeeWithConnections'
     getAllEmployeesResponse:
       type: object
       required:
