изменил тип запроса получения списка сотрудников

--- a/company/api/frontend/frontendapi.yaml
+++ b/company/api/frontend/frontendapi.yaml
@@ -130,7 +130,7 @@ paths:
         '401':
           description: Unauthorized
   /employee/list:
-    get:
+    post:
       operationId: GetEmployeeList
       tags:
         - Employee
